Fix too wide post

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -75,3 +75,8 @@ a[href="https://www.froala.com/wysiwyg-editor?k=u"] {
     position: absolute;
     top: -99999999px;
 }
+
+#article_content div,
+#article_content span {
+    max-width: 800px !important;
+}
